Change the title

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       rel="shortcut icon"
       href="https://img.icons8.com/doodle/48/calculator--v1.png"
       type="image/x-icon" />
-    <title>Calculator App</title>
+    <title>Math Magician App</title>
   </head>
   <body>
     <div id="root"></div>
